--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         }
     ],
     "require": {
-        "php": "^7.2", 
+        "php": "^7.2",
         "guzzlehttp/guzzle": "~6.0|~5.0|~4.0",
         "firebase/php-jwt": "^5.0",
-        "illuminate/support": "^5.2.*"
+        "illuminate/support": "^5.2"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
